--- a/theme.conf
+++ b/theme.conf
@@ -20,7 +20,8 @@ selection_big   themes/Matrix-rEFInd/selection_big.png
 selection_small themes/Matrix-rEFInd/selection_small.png
 
 # only show shutdown and bios
-showtools shutdown,firmware,hidden_tags
+# showtools shutdown,firmware,hidden_tags
+showtools shutdown
 
 # only show two icons at a time
 max_tags 2
